--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       align-items: center;
       background: linear-gradient(135deg, #ff9a9e, #fad0c4);
       font-family: 'Comic Sans MS', cursive, sans-serif;
+      flex-direction: column;
     }
 
     .card {
@@ -39,7 +40,76 @@
       margin-top: 10px;
     }
 
-    /* Fade In */
+    /* Button */
+    .memories-btn {
+      margin-top: 20px;
+      padding: 12px 25px;
+      font-size: 1.2rem;
+      border: none;
+      border-radius: 30px;
+      background: linear-gradient(45deg, #ff4d6d, #ff9966);
+      color: white;
+      cursor: pointer;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      animation: pulse 2s infinite;
+    }
+
+    .memories-btn:hover {
+      transform: scale(1.1);
+      box-shadow: 0 8px 20px rgba(0,0,0,0.3);
+    }
+
+    @keyframes pulse {
+      0% { transform: scale(1); }
+      50% { transform: scale(1.05); }
+      100% { transform: scale(1); }
+    }
+
+    /* Modal */
+    .modal {
+      display: none;
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: rgba(0,0,0,0.8);
+      justify-content: center;
+      align-items: center;
+      z-index: 100;
+    }
+
+    .modal-content {
+      background: white;
+      padding: 20px;
+      border-radius: 15px;
+      max-width: 90%;
+      max-height: 90%;
+      overflow-y: auto;
+      text-align: center;
+      animation: fadeIn 0.5s ease-in-out;
+    }
+
+    .modal-content img {
+      width: 100%;
+      max-width: 400px;
+      border-radius: 12px;
+      margin: 10px;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+      transition: transform 0.3s;
+    }
+
+    .modal-content img:hover {
+      transform: scale(1.05);
+    }
+
+    .close {
+      position: absolute;
+      top: 20px; right: 30px;
+      font-size: 2rem;
+      color: white;
+      cursor: pointer;
+    }
+
+    /* Animations */
     @keyframes fadeIn {
       from { opacity: 0; transform: scale(0.9); }
       to { opacity: 1; transform: scale(1); }
@@ -78,12 +148,31 @@
 </head>
 <body>
   <div class="card">
-    <h1>🎉  Wish you many many Happy returns of the day Dipa darling... 🎂</h1>
+    <h1>🎉 Wish you many many Happy returns of the day Dipa darling... 🎂</h1>
     <p>Wishing you endless joy, laughter, and happiness today ❤️</p>
+    <button class="memories-btn" onclick="openModal()">Click to see our memories</button>
+  </div>
+
+  <!-- Modal -->
+  <div id="memoriesModal" class="modal">
+    <span class="close" onclick="closeModal()">&times;</span>
+    <div class="modal-content">
+      <h2>✨ Our Memories ✨</h2>
+      <img src="photos/pahilibhet.jpg" alt="Memory 1">
+      <img src="photos/Thane.jpg" alt="Memory 2">
+      <img src="photos/vashi.jpg" alt="Memory 3">
+      <img src="photos/Honeymoon.jpg" alt="Memory 4">
+      <img src="photos/Thane.jpg" alt="Memory 6">
+      <img src="photos/TrainJourney.jpg" alt="Memory 7">
+      <img src="photos/krishnakath.jpg" alt="Memory 8">
+      <img src="photos/amrutwedding.jpg" alt="Memory 9">
+	  <img src="photos/manglagaur.jpg" alt="Memory 4">
+      <img src="photos/favone.jpg" alt="Memory 10">
+    </div>
   </div>
 
   <script>
-   
+    // Balloons
     function createBalloon() {
       const balloon = document.createElement("div");
       balloon.classList.add("balloon");
@@ -91,7 +180,6 @@
 
       const colors = ["#ff4d6d", "#ffcc00", "#66ccff", "#99ff99", "#ff9966"];
       balloon.style.background = colors[Math.floor(Math.random() * colors.length)];
-
       balloon.style.left = Math.random() * window.innerWidth + "px";
       balloon.style.animationDuration = (6 + Math.random() * 5) + "s";
 
@@ -99,7 +187,7 @@
     }
     setInterval(createBalloon, 800);
 
-
+    // Confetti
     function createConfetti() {
       const confetti = document.createElement("div");
       confetti.classList.add("confetti");
@@ -107,14 +195,20 @@
 
       const colors = ["#ff4d6d", "#ffcc00", "#66ccff", "#99ff99", "#ff9966"];
       confetti.style.background = colors[Math.floor(Math.random() * colors.length)];
-
       confetti.style.left = Math.random() * window.innerWidth + "px";
       confetti.style.animationDuration = (3 + Math.random() * 3) + "s";
 
       setTimeout(() => confetti.remove(), 5000);
     }
     setInterval(createConfetti, 200);
+
+    // Modal logic
+    function openModal() {
+      document.getElementById("memoriesModal").style.display = "flex";
+    }
+    function closeModal() {
+      document.getElementById("memoriesModal").style.display = "none";
+    }
   </script>
 </body>
 </html>
-
