--- a/index.html
+++ b/index.html
@@ -158,16 +158,16 @@
     <span class="close" onclick="closeModal()">&times;</span>
     <div class="modal-content">
       <h2>✨ Our Memories ✨</h2>
-      <img src="photos/pahilibhet.jpg" alt="Memory 1">
-      <img src="photos/Thane.jpg" alt="Memory 2">
-      <img src="photos/vashi.jpg" alt="Memory 3">
-      <img src="photos/Honeymoon.jpg" alt="Memory 4">
-      <img src="photos/Thane.jpg" alt="Memory 6">
-      <img src="photos/TrainJourney.jpg" alt="Memory 7">
-      <img src="photos/krishnakath.jpg" alt="Memory 8">
-      <img src="photos/amrutwedding.jpg" alt="Memory 9">
-	  <img src="photos/manglagaur.jpg" alt="Memory 4">
-      <img src="photos/favone.jpg" alt="Memory 10">
+      <img src="pahilibhet.jpg" alt="Memory 1">
+      <img src="Thane.jpg" alt="Memory 2">
+      <img src="vashi.jpg" alt="Memory 3">
+      <img src="Honeymoon.jpg" alt="Memory 4">
+      <img src="Thane.jpg" alt="Memory 6">
+      <img src="TrainJourney.jpg" alt="Memory 7">
+      <img src="krishnakath.jpg" alt="Memory 8">
+      <img src="amrutwedding.jpg" alt="Memory 9">
+	  <img src="manglagaur.jpg" alt="Memory 4">
+      <img src="favone.jpg" alt="Memory 10">
     </div>
   </div>
 
