--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
     <span class="close" onclick="closeModal()">&times;</span>
     <div class="modal-content">
       <h2>✨ Our Memories ✨</h2>
-      <img src="pahilibhet.jpg" alt="Memory 1">
+      <img src="Pahilibhet.jpg" alt="Memory 1">
       <img src="Thane.jpg" alt="Memory 2">
       <img src="vashi.jpg" alt="Memory 3">
       <img src="Honeymoon.jpg" alt="Memory 4">
