--- a/index.html
+++ b/index.html
@@ -14,16 +14,17 @@
       --shadow-lg: 0 20px 45px rgba(0,0,0,0.45);
     }
 
-    /* PAGE + BACKGROUND */
+      /* PAGE + BACKGROUND */
     body {
       margin: 0;
       padding: 0;
-      overflow: hidden;
+      /* FIX 1: remove overflow hidden so whole page visible */
       min-height: 100vh;
       display: flex;
       justify-content: center;
-      align-items: center;
+      align-items: flex-start; /* start so card doesn’t stick in middle only */
       background: url("dipa.jpg") no-repeat center center / cover;
+      background-attachment: fixed; /* FIX 2: keeps background fixed */
       font-family: 'Comic Sans MS', cursive, sans-serif;
       position: relative;
     }
@@ -48,6 +49,7 @@
       max-width: 820px;
       width: calc(100% - 32px);
       backdrop-filter: blur(2px);
+	   margin: 40px auto;
     }
     h1 {
       color: var(--accent);
@@ -243,6 +245,32 @@
       box-shadow: 0 3px 8px rgba(0,0,0,0.15);
       border-radius: 4px;
     }
+	 /* BUTTONS */
+    .actions{
+      display:flex; 
+      flex-wrap:wrap; 
+      justify-content:center; 
+      gap:12px; 
+      margin-top: 10px;
+    }
+    .btn {
+      padding: 12px 22px;
+      font-size: 1.05rem;
+      border: none;
+      border-radius: 30px;
+      background: linear-gradient(45deg, var(--btn-grad1), var(--btn-grad2));
+      color: white;
+      cursor: pointer;
+      transition: transform 0.25s ease, box-shadow 0.25s ease;
+      animation: pulse 2s infinite;
+    }
+    .btn:hover { transform: translateY(-2px) scale(1.04); }
+    .btn.secondary{
+      background: rgba(255,255,255,0.85);
+      color:#222;
+      border: 1px solid rgba(0,0,0,0.08);
+      animation: none;
+    }
 
     /* ANIMATIONS + FX */
     @keyframes fadeIn {
@@ -287,8 +315,10 @@
 </head>
 <body>
   <!-- AUDIO (autoplay may be blocked until user interacts) -->
-  <audio id="bgMusic" src="music.mp3" loop preload="auto"></audio>
-
+ <audio id="bgMusic" src="music.mp3" loop preload="auto"></audio>
+  <audio id="favSong" src="fav.mp3" preload="auto"></audio>
+  <audio id="tuzaSong" src="tuza.mp3" preload="auto"></audio>
+  <audio id="mazaSong" src="maza.mp3" preload="auto"></audio>
   <div class="card" id="mainCard">
     <h1>🎉 प्रिय बायको तुला वाढदिवसाच्या हार्दिक शुभेच्छा ...! 🎂</h1>
     <p class="lead">Wishing you endless joy, laughter, and happiness today ❤️</p>
@@ -308,6 +338,13 @@
       <button class="btn secondary" id="musicToggle" aria-pressed="false">▶️ Play Music</button>
     </div>
 
+ <!-- NEW SONG BUTTONS -->
+    <div class="actions">
+      <button class="btn" onclick="playSong('favSong')">🎶 Tuza fav</button>
+      <button class="btn" onclick="playSong('tuzaSong')">🎶 Maza fav</button>
+      <button class="btn" onclick="playSong('mazaSong')">🎶 Apla fav</button>
+    </div>
+	
     <!-- POLAROID GALLERY -->
     <div class="polaroids" id="polaroidGrid">
       <!-- Update captions as you like -->
