--- a/index.html
+++ b/index.html
@@ -381,9 +381,10 @@
 
  <!-- NEW SONG BUTTONS -->
     <div class="actions">
-      <button class="btn" onclick="playSong('favSong')">🎶 Tuza fav</button>
-      <button class="btn" onclick="playSong('tuzaSong')">🎶 Maza fav</button>
-      <button class="btn" onclick="playSong('mazaSong')">🎶 Apla fav</button>
+   <!-- 🎶 Song Button -->
+      <button class="btn" onclick="playSong('koitumsanahi.mp3', this)">🎶 Maza Fav</button>
+      <!-- <button class="btn" onclick="playSong('tuzaSong')">🎶 Maza fav</button> -->
+      <!-- <button class="btn" onclick="playSong('mazaSong')">🎶 Apla fav</button> -->
     </div>
 	
 	<button class="gift-btn" onclick="openGift()">🎁 Open Surprise</button>
