--- a/index.html
+++ b/index.html
@@ -376,15 +376,13 @@
     <div class="actions">
       <button class="btn" onclick="openModal()">Click to see our memories</button>
      
-<button class="btn" onclick="playSong('favSong', this)">🎶 Maza Fav</button>
+      <button class="btn" onclick="playSong('favSong', this)">🎶 Maza Fav</button>
+	  
+	  	<button class="gift-btn" onclick="openGift()">🎁 Mazya hya bhavna</button>
 
     </div>
 
-
-    <div class="actions>
-      	<button class="gift-btn" onclick="openGift()">🎁 Open Surprise</button>
-
-    </div>
+      
 	
 
 <!-- Surprise Modal -->
