--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
     <div class="actions">
       <button class="btn" onclick="openModal()">Click to see our memories</button>
      
-      <button class="btn" onclick="playSong('favSong', this)">🎶 Maza Fav</button>
+      <button class="btn" onclick="playSong('favSong', this)">🎶 Click here to play your fav song bayko</button>
 	  
 	  	<button class="gift-btn" onclick="openGift()">🎁 Mazya hya bhavna</button>
 
