--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       display: flex;
       justify-content: center;
       align-items: flex-start; /* start so card doesn’t stick in middle only */
-      background: url("dipa.jpg") no-repeat center center / cover;
+      background: url("dipa.JPG") no-repeat center center / cover;
       background-attachment: fixed; /* FIX 2: keeps background fixed */
       font-family: 'Comic Sans MS', cursive, sans-serif;
       position: relative;
@@ -659,3 +659,4 @@ document.addEventListener("click", () => {
   </script>
 </body>
 </html>
+
