--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       --accent: #e91e63;
       --btn-grad1:#ff4d6d;
       --btn-grad2:#ff9966;
-      --card-bg: rgba(255,255,255,0.92);
+      --card-bg: rgba(255,255,255,0.60);
       --shadow-lg: 0 20px 45px rgba(0,0,0,0.45);
     }
 
@@ -38,19 +38,22 @@
 
     /* CARD */
     .card {
-      position: relative;
-      z-index: 10;
-      text-align: center;
-      background: var(--card-bg);
-      padding: 44px 36px 28px;
-      border-radius: 22px;
-      box-shadow: var(--shadow-lg);
-      animation: fadeIn 1.1s ease-out;
-      max-width: 820px;
-      width: calc(100% - 32px);
-      backdrop-filter: blur(2px);
-	   margin: 40px auto;
-    }
+  position: relative;
+  z-index: 10;
+  text-align: center;
+  background: 
+    linear-gradient(rgba(255,255,255,0.8), rgba(255,255,255,0.8)), 
+    url("dipa.webp") center/cover no-repeat;
+  padding: 44px 36px 28px;
+  border-radius: 22px;
+  box-shadow: var(--shadow-lg);
+  animation: fadeIn 1.1s ease-out;
+  max-width: 820px;
+  width: calc(100% - 32px);
+  backdrop-filter: blur(2px);
+  margin: 40px auto;
+}
+
     h1 {
       color: var(--accent);
       font-size: clamp(1.6rem, 3.2vw, 2.6rem);
