--- a/index.html
+++ b/index.html
@@ -273,6 +273,16 @@
       border: 1px solid rgba(0,0,0,0.08);
       animation: none;
     }
+	.chat-bubble{
+  background:#ffe6f0;
+  color:#222;
+  padding:10px 14px;
+  border-radius:18px;
+  max-width:240px;
+  margin:auto;
+  animation: popIn 0.5s ease;
+}
+@keyframes popIn { from {transform:scale(0.6); opacity:0;} to {transform:scale(1); opacity:1;} }
 	
 /* 🎁 Surprise Modal */
 .modal {
@@ -343,10 +353,10 @@
 </head>
 <body>
   <!-- AUDIO (autoplay may be blocked until user interacts) -->
+<button id="playMusicBtn">▶️ Play Music</button>
 <audio id="bgMusic" loop>
   <source src="https://rushikulkarni97-code.github.io/dipabirthday/koitumsanahi.mp3" type="audio/mpeg">
 </audio>
-
 	
   <div class="card" id="mainCard">
     <h1>🎉 प्रिय बायको तुला वाढदिवसाच्या हार्दिक शुभेच्छा ...! 🎂</h1>
@@ -366,6 +376,18 @@
       <button class="btn" onclick="openModal()">Click to see our memories</button>
       
 	  <button class="btn" onclick="openGift()">🎁 Mazya hya bhavna</button>
+	  <button class="btn" onclick="openFirstMessage()">📱 Our First Message</button>
+
+
+</div>
+<div id="firstMessageModal" class="modal">
+  <div class="modal-content">
+    <span class="close" onclick="closeFirstMessage()">&times;</span>
+    <div class="chat-bubble">
+      <p>Hey! This is where it all started ❤️</p>
+    </div>
+  </div>
+
 
     </div>
 
@@ -622,11 +644,19 @@
 function closeGift() {
   document.getElementById("giftModal").style.display = "none";
 }
-document.addEventListener("click", function startMusic() {
-    const audio = document.getElementById("bgMusic");
-    audio.play().catch(()=>{}); // try play
-    document.removeEventListener("click", startMusic); // only run once
+document.getElementById('playMusicBtn').addEventListener('click', function() {
+    const audio = document.getElementById('bgMusic');
+    audio.play().then(() => {
+        console.log("Music started!");
+        // hide the button after playing
+        this.style.display = 'none';
+    }).catch(err => {
+        console.log("Playback failed:", err);
+    });
 });
+function openFirstMessage(){ document.getElementById("firstMessageModal").style.display="flex"; }
+function closeFirstMessage(){ document.getElementById("firstMessageModal").style.display="none"; }
+
   </script>
 </body>
 </html>
