--- a/index.html
+++ b/index.html
@@ -354,8 +354,8 @@
 <body>
   <!-- AUDIO (autoplay may be blocked until user interacts) -->
 
-<audio id="bgMusic" loop>
-  <source src="https://rushikulkarni97-code.github.io/dipabirthday/koitumsanahi.mp3" type="audio/mpeg">
+<audio controls autoplay loop>
+  <source src="koitumsanahi.mp3" type="audio/mpeg">
 </audio>
 	
   <div class="card" id="mainCard">
@@ -377,9 +377,7 @@
       
 	  <button class="btn" onclick="openGift()">🎁 Mazya hya bhavna</button>
 	  <button class="btn" onclick="openFirstMessage()">📱 From where it all started..!</button>
-	  <button id="playMusicBtn">▶️ Play Music</button>
-
-
+	  
 </div>
 <div id="firstMessageModal" class="modal">
   <div class="modal-content">
