--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
 <body>
   <!-- AUDIO (autoplay may be blocked until user interacts) -->
 
-<audio controls autoplay loop>
+<audio controls loop>
   <source src="koitumsanahi.mp3" type="audio/mpeg">
 </audio>
 	
@@ -645,15 +645,10 @@
 function closeGift() {
   document.getElementById("giftModal").style.display = "none";
 }
-document.getElementById('playMusicBtn').addEventListener('click', function() {
-    const audio = document.getElementById('bgMusic');
-    audio.play().then(() => {
-        console.log("Music started!");
-        // hide the button after playing
-        this.style.display = 'none';
-    }).catch(err => {
-        console.log("Playback failed:", err);
-    });
+window.addEventListener("DOMContentLoaded", () => {
+  const audio = document.getElementById("bgMusic");
+  // enable controls explicitly
+  audio.controls = true;
 });
 function openFirstMessage(){ document.getElementById("firstMessageModal").style.display="flex"; }
 function closeFirstMessage(){ document.getElementById("firstMessageModal").style.display="none"; }
